--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stytch/nextjs": "^7.0.0",
+    "@stytch/vanilla-js": "^1.0.1",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
-    "@stytch/nextjs": "^7.0.0",
-    "@stytch/vanilla-js": "^1.0.1",
-    "stytch": "^7.1.3",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "next": "13.4.6",
+    "prettier": "^2.8.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "stytch": "^7.1.3",
     "typescript": "5.1.3"
   }
 }
