Adjust package.json name, bounding box of link, meta

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stytch-nextjs13-example",
+  "name": "stytch-nextjs-app-router-example",
   "version": "0.1.0",
   "private": true,
   "scripts": {
