--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "react-dom": "18.2.0",
     "stytch": "^10.11.0",
     "typescript": "5.4.3"
+  },
+  "devDependencies": {
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3"
   }
 }
