--- a/package.json
+++ b/package.json
@@ -29,7 +29,13 @@
     "typescript": "5.4.3"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3"
-  }
+  },
+  "ampt": {
+    "org": "kold-stytch",
+    "app": "photo-ai-app"
+  },
+  "main": "entrypoint.mjs"
 }
