--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "ampt:build": "ampt-next build",
+    "ampt:build": "next build",
     "ampt:dev": "next dev",
     "dev": "next dev",
     "build": "next build",
@@ -21,14 +21,17 @@
     "@types/react-dom": "18.2.23",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.4",
+    "lodash": "^4.17.21",
     "next": "14.1.4",
     "prettier": "^3.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "replicate": "^0.29.1",
     "stytch": "^10.11.0",
     "typescript": "5.4.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.0",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3"
